# hve-core-foglight

./: .cspell.json  .gitignore  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  TRANSPARENCY-NOTE.md  codecov.yml  package.json
.cspell/: general-technical.txt  industry-acronyms.txt
.github/: CUSTOM-AGENTS.md  copilot-instructions.md  labels.yml
.github/instructions/: README.md
.github/prompts/: README.md
.github/workflows/: README.md  action-version-consistency-scan.yml  adr-consistency-validation.yml  ai-artifact-validation.yml  codeql-analysis.yml  copilot-setup-steps.yml  copyright-headers.yml  create-gh-code-scanning-issues.yml  create-stale-docs-issues.yml  dependency-pinning-scan.yml  dependency-pr-review.lock.yml  dependency-review.yml  deploy-docs.yml  devcontainer-change-log.yml  doc-update-check.lock.yml  docusaurus-tests.yml  eval-validation.yml  extension-marketplace-publish.yml  extension-package.yml  frontmatter-validation.yml  fuzz-tests.yml  gh-code-scanning.yml  gitleaks-scan.yml  issue-implement.lock.yml  issue-triage.lock.yml  (+31 more)
collections/: coding-standards.collection.md  coding-standards.collection.yml  experimental.collection.md  experimental.collection.yml  hve-core-all.collection.md  hve-core-all.collection.yml  hve-core.collection.md  hve-core.collection.yml  project-planning.collection.md  project-planning.collection.yml  rpi.collection.md  rpi.collection.yml  security.collection.md  security.collection.yml
docs/: README.md
scripts/evals/moderation/: moderate.py  pyproject.toml
scripts/evals/moderation/tests/: test_moderate.py
(+288 files in other folders)
